CHANGELOG

2.0.56
UTIL:

BUGFIX:
* type=device | bugfix for actions=exportLicenseToExcel:file.html

GENERAL:
* class UTIL - argument template=XYZ - improve output message if template not found


2.0.55 (20220808)
UTIL:
* type=addressgroup-/servicegroup-/service-merger | introduce dupalgorithm=identical
* type=servicegroup-merger | introduce childDG validation
* type=addressgroup-/servicegroup-/merger - for childDG object move; correct hashmap object array of actual DG

BUGFIX:
* type=diff "filter=XPATH" | bugfix as filter was not used
* type=UTIL-merger | fix for Buckbeak validation

GENERAL:
* extend different Fawkes and Buckbeak related classes
* improve bash completion script
* class TemplateStack | introduce method setName()
* class PanoramaConf | introduce method removeTemplateStack - improve removeDeviceGroup and removeTemplate
* class MERGER | method servicegroup_merger - correct variable name
* test script optimisation - MERGER output adjustment


2.0.54 (20220803)
UTIL:
* type=rule | new 'filter=(service.object.count ><=! VALUE)'
* type=service-merger | improve output for exportcsv
* type=rule-merger | improve output for exportcsv
* type=diff | introduce working argument shadow-json
* type=rule | introduce new 'filter=(service timeout.is.set)' | improve for 'filter=(service.object.count <>=! VALUE)'

BUGFIX:
* type=service-merger | bugfix if service timeout is set and on childDG compare to parentDG the timeout differ

GENERAL:


2.0.53 (20220802)
UTIL:
* class MERGER | code cleaning - improvement to use methods | benefit for service-/tag-/addressgroup-/servicegroup-merger


2.0.52 (20220801)
UTILS:
* type=device | introduce 'filter=(name is.in.file FILE)'

BUGFIX:
* type=device actions=manageddevice-delete/-create | fix/rework method
* type=rulemerger | bugfix for exportcsv if rule is skipped because of deny or none matching filter

GENERAL:
* update dockerfiles and install_script_ubuntu


2.0.51 (20220731)
UTILS: